feat: opencli 多分支 render 与 xxl-job-core 矩阵（2.7.x）
- 新增 scripts/render-branch-pom.py、RELEASE-CENTRAL.md
- Admin 多协议层、XxlJobHandlerRegistrar、Cookie 修复
- 2.7.x: SB 2.7.18 / core 2.5.0 / registJobHandler
- 双自动配置 spring.factories + AutoConfiguration.imports

Co-authored-by: Cursor <cursoragent@cursor.com>